# fish-speech.rs

./: .gitignore  Cargo.toml  cmd.txt
fish_speech_core/lib/codec/: convnext.rs
fish_speech_core/lib/lm/ops/: repeat_kv.rs
fish_speech_python/: Cargo.toml
fish_speech_python/src/: codec.rs  lm.rs
server/: Cargo.toml
voices-template/: index.json  maksim_suslov.npy
