[workspace]
members = [
    "candle-gqa-kernels",
    "fish_speech_core",
    "fish_speech_python",
    "server",
]
resolver = "2"
package.version = "0.3.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
candle-core = { git = "https://github.com/lexunok/candle.git", version = "0.9.2", features = ["cuda", "cudnn"] }
candle-nn = { git = "https://github.com/lexunok/candle.git", version = "0.9.2", features = ["cuda", "cudnn"] }
candle-transformers = {git = "https://github.com/lexunok/candle.git", version = "0.9.2", features = ["cuda", "cudnn","flash-attn"] }
candle-flash-attn  = {git = "https://github.com/lexunok/candle.git", version = "0.9.2", features = ["cudnn"] }
tokenizers = "0.22.2"
